--- a/src/react-components/RootPage/ViewportPaginationView/ViewportPaginationView.css
+++ b/src/react-components/RootPage/ViewportPaginationView/ViewportPaginationView.css
@@ -1,10 +1,10 @@
 .viewport-pagination-view {
     min-height: 100%;
-    max-height: 100%;
+    max-height: 100vh;
     height: 100%;
 }
 
-.viewport-pagination-view .viewport-container:not(.extra):not(.specificity) {
+.viewport-pagination-view .viewport-container {
     transition: transform 1s ease;
 }
 
